--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: Roshan Ramkeesoon
 email: rramkeesoon93@gmail.com
 #canonical_url: https://edwinexemplar.com
-keywords: "Software Engineer, Machine Learning Engineer, TensorFlow, PyTorch, Python, Machine Learning, Deep Learning, Federated Learning"
+keywords: "Roshan, Ramkeesoon, Roshan Ramkeesoon, Ramkeeson, Software Engineer, Machine Learning Engineer, TensorFlow, PyTorch, Python, Machine Learning, Deep Learning, Federated Learning"
 skills: "Data Scientist in Seattle, WA"
 baseurl:
 
@@ -24,7 +24,7 @@ bing_verify:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 0D3A5F
+  primary: 003171
   primary-rgb: "13, 58, 95"
   secondary: 120F07
   secondary-dark: 120F07
