--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ bing_verify:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 003366
-  primary-rgb: "0, 51, 102"
+  primary: 0D3A5F
+  primary-rgb: "13, 58, 95"
   secondary: 120F07
   secondary-dark: 120F07
   section-tout: eaf1f1
